--- a/01_dockerfiles/ex02/Dockerfile
+++ b/01_dockerfiles/ex02/Dockerfile
@@ -11,7 +11,8 @@ ONBUILD RUN bundle install
 ONBUILD RUN bundle exec rake db:migrate
 ONBUILD RUN bundle exec rake db:seed
 
-# docker build -t ft-rails:onbuild .
+# docker build -t ft-rails:on-build .
 # cd test
 # docker build -t ex02 .
-# docker run --rm ex02
+# docker run --rm -it -p 3000:3000 ex02
+# access the site with ip:3000
